@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023, 2024 Obeo.
+ * Copyright (c) 2023, 2025 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -78,4 +78,6 @@ public class LabelConstants {
     public static final String VARIANT = "variant";
 
     public static final String VARIATION = "variation";
+
+    public static final String DEFAULT = "default";
 }
